<resources>
    <string name="app_name">Teleprompter</string>
    <string name="panorama_desc">Teleprompter panorama</string>

    <!-- Preferences-->
    <string name="pref_text_color_label">Text Color</string>
    <string name="pref_bg_color_label">Background Color</string>
    <string name="pref_mirror_key">mirror</string>
    <string name="pref_mirror_label">Mirror</string>
    <string name="pref_mirror_summary">Mirror the text</string>
    <string name="pref_text_size_label">Font Size</string>
    <string name="pref_text_size_key">font_size</string>
    <string name="pref_text_size_summary">Set the Font Size</string>
    <string name="pref_speed_summary">Set scrolling speed</string>
    <string name="pref_speed_key">speed</string>
    <string name="pref_speed_label">Scrolling speed</string>
    <string name="pref_font_label">Font</string>
    <string name="pref_font_key">font_name</string>
    <string name="font_face_default">Roboto</string>
    <string name="pref_font_summary">Change font</string>
    <string name="pref_text_color_summary">Set text color</string>
    <string name="pref_bg_color_summary">Set background color</string>
    <string name="pref_text_color_key">text_color</string>
    <string name="pref_background_color_key">background_color</string>

    <string name="action_add">Add Script</string>
    <string name="script_title">Script Title</string>
    <string name="script_body">Teleprompter is an autocue style app that transform your mobile in a display device that prompts the person speaking with an electronic visual text of a speech or script, similar to using cue cards but automatically, allowing the speaker to maintain eye contact with the public.\nTeleprompter is intended for presentations, lectures, broadcasters, filmmakers, musicians, singers, business professionals, politicians, students, or any public speaking!\nFeatures:\nUnlimited scripts\nFull screen mode\nMirror mode (for use in teleprompter rigs)\nBackground color selection\nAdjust the text size, color and font family\nScript import from clipboard (Copy &amp; Paste)\nAdjust the speed of the teleprompter\nDelete scripts.</string>
    <string name="script_content_hint">Script content</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">CANCEL</string>
    <string name="script_removed">Script removed: %s</string>
    <string name="error_add_title">Please add a title.</string>
    <string name="error_add_body">Please add a script content.</string>
    <string name="script_title_hint">Script title</string>
    <string name="tracker_action">Action</string>
    <string name="tracker_share">Share</string>
    <string name="action_update_widget">update_widget</string>

    <string name="play_menu_item">PLAY</string>
    <string name="modify_menu_item">MODIFY</string>
    <string name="delete_menu_item">DELETE</string>
    <string name="settings_menu_item">SETTINGS</string>
    <string name="play_menu">Play_pause</string>

    <string name="menu_play">Play</string>
    <string name="menu_modify">Modify</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="save_button_label">Save</string>

</resources>
