<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_play"
        android:contentDescription="@string/play_menu_item"
        android:icon="@drawable/ic_play_circle_outline_black_24dp"
        android:orderInCategory="10"
        android:title="@string/menu_play"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_modify"
        android:contentDescription="@string/modify_menu_item"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="20"
        android:title="@string/menu_modify"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_delete"
        android:contentDescription="@string/delete_menu_item"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="30"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_settings"
        android:contentDescription="@string/menu_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="40"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

</menu>