<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/panorama_desc"
        android:src="@drawable/panorama_01" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimDarkSemiTransp"
            android:contentDescription="@string/script_title"
            android:padding="4dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_widget_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_widget_title"
            android:background="@color/colorWhiteSemiTransp"
            android:contentDescription="@string/script_body"
            android:ellipsize="end"
            android:text="@string/script_body"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>
</FrameLayout>