<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".view.EditActivity">

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/script_title_hint"
        android:maxLength="@integer/script_title_max_length"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/addScript"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:hint="@string/script_content_hint"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toBottomOf="@id/addTitle" />

    <TextView
        android:id="@+id/button_save"
        style="@style/NormalTextWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonbar_bg_selector"
        android:contentDescription="@string/button_save"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/button_save"
        android:textAlignment="center"
        android:enabled="false"
        android:textColor="@color/buttonbar_text_selector"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/button_cancel"
        style="@style/NormalTextWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:contentDescription="@string/button_cancel"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/button_cancel"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_save" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="11dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_save" />

</android.support.constraint.ConstraintLayout>
